
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned long BRUTE_START ;
 int banner (char*) ;
 int bruteforce (unsigned long) ;
 int child_process () ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int getopt (int,char**,char*) ;
 int make_buffer (unsigned long) ;
 int optarg ;
 int stderr ;
 unsigned long strtoul (int ,int *,int ) ;

main(int argc, char *argv[])
 {
  char *optionlist = "ba:h:";
  int option;
  unsigned long start = BRUTE_START;
  unsigned long choose;
  int u_r_script_kiddy = 0;
  int Opterr = 1;
  banner(argv[0]);
  if(argc < 2)
  fprintf(stderr,"Use -h for help\n");
  while( (option = getopt(argc,argv,optionlist) ) != -1)
       switch(option)
        {
   case 'b':
    u_r_script_kiddy=1;
    break;

   case 'h':
    banner(argv[0]);
    break;

   case 'a':
           choose = strtoul(optarg,((void*)0),0);
           make_buffer(choose);
           child_process();
           exit(0);
           break;

   case '?':
    fprintf(stderr,"Unknown Option use -h for help\n");
    banner(argv[0]);
    exit(-1);

   default:
    banner(argv[0]);
    exit(-1);
 }
   if(u_r_script_kiddy)
     bruteforce(start);
      return 0;
}
