; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_23063.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_23063.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"ba:h:\00", align 1
@BRUTE_START = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"Use -h for help\0A\00", align 1
@optarg = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [32 x i8] c"Unknown Option use -h for help\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  %12 = load i64, i64* @BRUTE_START, align 8
  store i64 %12, i64* %8, align 8
  store i32 0, i32* %10, align 4
  store i32 1, i32* %11, align 4
  %13 = load i8**, i8*** %5, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @banner(i8* %15)
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 2
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @stderr, align 4
  %21 = call i32 @fprintf(i32 %20, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %19, %2
  br label %23

23:                                               ; preds = %58, %22
  %24 = load i32, i32* %4, align 4
  %25 = load i8**, i8*** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @getopt(i32 %24, i8** %25, i8* %26)
  store i32 %27, i32* %7, align 4
  %28 = icmp ne i32 %27, -1
  br i1 %28, label %29, label %59

29:                                               ; preds = %23
  %30 = load i32, i32* %7, align 4
  switch i32 %30, label %52 [
    i32 98, label %31
    i32 104, label %32
    i32 97, label %37
    i32 63, label %44
  ]

31:                                               ; preds = %29
  store i32 1, i32* %10, align 4
  br label %58

32:                                               ; preds = %29
  %33 = load i8**, i8*** %5, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 0
  %35 = load i8*, i8** %34, align 8
  %36 = call i32 @banner(i8* %35)
  br label %58

37:                                               ; preds = %29
  %38 = load i32, i32* @optarg, align 4
  %39 = call i64 @strtoul(i32 %38, i32* null, i32 0)
  store i64 %39, i64* %9, align 8
  %40 = load i64, i64* %9, align 8
  %41 = call i32 @make_buffer(i64 %40)
  %42 = call i32 (...) @child_process()
  %43 = call i32 @exit(i32 0) #3
  unreachable

44:                                               ; preds = %29
  %45 = load i32, i32* @stderr, align 4
  %46 = call i32 @fprintf(i32 %45, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0))
  %47 = load i8**, i8*** %5, align 8
  %48 = getelementptr inbounds i8*, i8** %47, i64 0
  %49 = load i8*, i8** %48, align 8
  %50 = call i32 @banner(i8* %49)
  %51 = call i32 @exit(i32 -1) #3
  unreachable

52:                                               ; preds = %29
  %53 = load i8**, i8*** %5, align 8
  %54 = getelementptr inbounds i8*, i8** %53, i64 0
  %55 = load i8*, i8** %54, align 8
  %56 = call i32 @banner(i8* %55)
  %57 = call i32 @exit(i32 -1) #3
  unreachable

58:                                               ; preds = %32, %31
  br label %23

59:                                               ; preds = %23
  %60 = load i32, i32* %10, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %65

62:                                               ; preds = %59
  %63 = load i64, i64* %8, align 8
  %64 = call i32 @bruteforce(i64 %63)
  br label %65

65:                                               ; preds = %62, %59
  ret i32 0
}

declare dso_local i32 @banner(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i64 @strtoul(i32, i32*, i32) #1

declare dso_local i32 @make_buffer(i64) #1

declare dso_local i32 @child_process(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @bruteforce(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
